# ShadowTalk

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  README.rst  ShadowTalk-PC.pro  ShadowTalk-PC.sln  ShadowTalk-PC.vcxproj  ShadowTalk-PC.vcxproj.filters  ShadowTalk-pc.pro  ShadowTalk.rc  qml.qrc  shadowtalk.icns
GeneratedFiles/: moc_st_cache.cpp  moc_st_friend.cpp  moc_st_group.cpp  moc_st_message.cpp  moc_st_picture.cpp  moc_st_pixelsize.cpp  moc_st_search.cpp  moc_st_thread.cpp  moc_st_trayicon.cpp  moc_st_utils.cpp  moc_st_voice.cpp  qrc_qml.cpp
include/: im.h
include/boost/asio/detail/: socket_types.hpp
include/maidsafe/common/: active.h  asio_service.h  cli.h  config.h  log.h
include/peersafe/imapi/: im.h
lib/x32/boost/: libboost_chrono-vc120-mt-1_57.lib  libboost_chrono-vc120-mt-gd-1_57.lib  libboost_date_time-vc120-mt-1_57.lib  libboost_date_time-vc120-mt-gd-1_57.lib  libboost_filesystem-vc120-mt-1_57.lib  libboost_system-vc120-mt-1_57.lib  libboost_system-vc120-mt-gd-1_57.lib  libboost_thread-vc120-mt-1_57.lib  libboost_thread-vc120-mt-gd-1_57.lib
lib/x32/ice/: libpj.lib  libpjlib-util.lib  libpjnath.lib
lib/x32/peersafe/: peersafe_network-msr.lib  protobuf_lite-msr.lib  udt-msr.lib
lib/x32/qrcode/: libqrcode.lib
lib/x64/boost/: libboost_chrono-vc120-mt-1_57.lib  libboost_chrono-vc120-mt-gd-1_57.lib  libboost_date_time-vc120-mt-1_57.lib  libboost_date_time-vc120-mt-gd-1_57.lib  libboost_filesystem-vc120-mt-1_57.lib  libboost_system-vc120-mt-1_57.lib  libboost_system-vc120-mt-gd-1_57.lib  libboost_thread-vc120-mt-1_57.lib  libboost_thread-vc120-mt-gd-1_57.lib
lib/x64/peersafe/: peersafe_network-msr.lib  protobuf_lite-msr.lib
qml/: ChatDisplay.qml  ChatDisplayEx.qml  ChatList.qml  ChatTextInput.qml  FriendAndContact.qml  FriendList.qml  ImgListComponent.qml  LoginProcess.qml  MainWindowButton.qml  MainWindowSetting.qml  STChatBlank.qml  STChatContentWH.qml  STChatEmojiImage.qml  STChatEmojiView.qml  STChatInput.qml  STChatItem.qml  STChatScrollBar.qml  STChatView.qml  STChatVoice.qml  SearchList.qml  TextWithImage.qml  ToolButton.qml  ToolsWindow.qml  WindowButtons.qml  common.js  functions.js  js_st_const.js  js_st_emoji.js  js_st_showemoji.js  login.qml  main.qml  picture.qml  res_EmojiData.xml
src/: main.cpp  main.cpp.uh1056
src/core/: cache.cpp  cache.h  context.h  core.h  dbase.cpp  dbase.h  log.cpp  log.h  parsexml.cpp  parsexml.h  pixelsize.cpp  pixelsize.h  st_base64.cpp  st_base64.h  st_cache.cpp  st_cache.h  st_context.cpp  st_context.h  st_log.cpp  st_log.h  st_parsexml.cpp  st_parsexml.h  st_picture.cpp  st_picture.h  st_pixelsize.cpp  st_pixelsize.h  st_qrcode.cpp  st_qrcode.h  st_search.cpp  st_search.h  st_thread.cpp  st_thread.h  st_utils.cpp  st_utils.h  st_voice.cpp  st_voice.h  st_zebra.cpp  st_zebra.h  utils.cpp  utils.h
src/net/: net.cpp  net.h  st_net.cpp  st_net.cpp.autosave  st_net.h
src/qrcode/: config.h  libqrcode.pro  mask.c  mmask.c  mqrspec.c  qrencode.c  qrinput.c  qrspec.c  split.c
src/share/: share.pb.cc  share.pb.cpp  share.pb.h  share.proto  st_share_proto.cpp  st_share_proto.h
src/widget/: friend.cpp  friend.h  friend_widget.h  group.cpp  group.h  group_widget.h  gui.h  login.cpp  login.h  message.cpp  message.h  qr_widget.h  st_chat.cpp  st_chat.h  st_friend.cpp  st_friend.h  st_group.cpp  st_group.h  st_login.cpp  st_login.h  st_message.cpp  st_message.h  st_picture.cpp  st_picture.h  st_search.cpp  st_search.h  st_trayicon.cpp  st_trayicon.h  st_utils.cpp  st_utils.h  st_voice.cpp  st_voice.h  style.h  system_tray_icon.h  widget.h
tools/: Drag.qml  FlowEffect.qml  ListViewTest.qml  Popup.qml  TestPopup.qml  Wheel.qml  arc.qml  rotate.qml  rotate2.qml  xuan1.qml  xuan2.qml
ui/: mainwindow.ui
